--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
+    "gulp-terser": "^1.2.0",
     "gulp-watch": "^5.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "jquery": "^3.4.1",
